[KIECLOUD-188] JDK 11 compatyibility added add-modules java.se flag into env (#212)
Signed-off-by: Ricardo Zanini <zanini@redhat.com>